--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "nuxt": "^2.0.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
